# AdventOfCode22

./: pyproject.toml
01_calories/: 01_calories.py
02_rock_paper_scissors/: RPS_total value.py  test_input.txt
03_Rucksack reorganization/: badge.py  rucksack.py
04_Camp_Cleanup/: cleanup.py  overlap.py
05_Supply_Stacks/: stacks.py
06_Tuning_trouble/: signal_start.py
07_No_space_left/: system_parser.py  system_parser_pt2.py
08_tree_house/: scenic_score.py  tree_house.py
