[tool.poetry]
name = "advent-of-code-22"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_22"}]

[tool.poetry.dependencies]
python = "^3.10"
regex-spm = "^1.0.0"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
